--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,8 @@ img {
     float: right;
     border: 1px solid #d8d8d8;
     padding: 5px 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 button {
